result/subtask05-casting/testcase01.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
INT_LIT 3
> Insert `x` (addr: 1) to scope level 1
FLOAT_LIT 3.140000
> Insert `y` (addr: 2) to scope level 1
> Insert `z1` (addr: 3) to scope level 1
> Insert `z2` (addr: 4) to scope level 1
IDENT (name=z1, address=3)
IDENT (name=x, address=1)
/home/share/hw2/input/subtask05-casting/testcase01.cpp:5:15: error:  syntax error
     5 |    z1 = x + (int (y);
       |              ^
Total lines: 5
